--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -168,6 +168,18 @@ jobs:
               -DEXTRA_CXXFLAGS=-flto=full
             with_pgo: true
 
+          - job_name: iOS aarch64
+            host_os: macos-11
+            os: ios
+            arch: aarch64
+            bootstrap_cmake_flags: -DD_COMPILER_FLAGS=-gcc=/usr/bin/c++
+            extra_cmake_flags: >-
+              -DBUILD_LTO_LIBS=ON
+              -DD_COMPILER_FLAGS="-O -flto=full -defaultlib=phobos2-ldc-lto,druntime-ldc-lto"
+              -DEXTRA_CXXFLAGS=-flto=full
+            with_pgo: true
+
+
           - job_name: Android armv7a
             host_os: ubuntu-20.04
             os: android
