--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -4,6 +4,7 @@ name: Main
 on:
   - pull_request
   - push
+  - workflow-dispatch
 
 concurrency:
   group: ${{ github.workflow }}-${{ github.ref }}
