--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
 [submodule "phobos"]
 	path = runtime/phobos
-	url = https://github.com/ldc-developers/phobos.git
+	url = git@github.com:tagion/phobos.git
